# charm13

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
assets/: fix_github_math.py  fix_github_math_escapes.py  house_hand.py  render_animations.py  render_figures.py
assets/fonts/: LICENSE_sabarian.txt  README.md
docs/: FIELD_GUIDE.md  MASTER.md  NATURAL.md  SKUNKWORKS.md  T1_BUDGET.md  WHERE_TO_SHARE.md
research/: ANALOGUES.md  LADDER_MASTER.md  README.md  THEOREMS.md
research/ladder/: kernel.py  run_ladder.py  run_ladder_high.py
research/m10/: RESULT.json  RESULT.md
research/m11/: RESULT.json  RESULT.md
research/m12/: RESULT.json  RESULT.md
research/m13/: RESULT.json  RESULT.md
research/m14/: RESULT.json  RESULT.md
research/m15/: RESULT.json  RESULT.md
research/m16/: RESULT.json  RESULT.md
research/m17/: RESULT.json  RESULT.md
research/m18/: RESULT.json  RESULT.md
research/m4/: CHARTER.md  CLAIM_LEDGER.json  CONJECTURES.md  DEFINITIONS.md  HUNTER_REPORT.md  MIRROR_REPORT.md  PRESS_NOTE.md  PRIOR_ART.md  README.md  REPRODUCE.md  RESULT.md  SCIENTIST_REVIEW.md
research/m5/: ALGORITHMS_AND_COMPLEXITY.md  ARCHIVIST_REPORT.md  CLAIM_LEDGER.json  DIRECTIVE_M5_OMEGA.md  EQUALITY_CASES.md  GUARDS.md  MODEL.md  PRIOR_ART.md  PRODUCT_DELTA.md  README.md  REFEREE_REJECTION.md  REPRODUCE.md  RESULT.md  SEED_THEOREMS.md  STABILITY.md  SUPPORT_CURVE.md  TEAM.md
research/m6/: RESULT.json  RESULT.md
research/m7/: RESULT.json  RESULT.md
research/m8/: RESULT.json  RESULT.md
research/m9/: RESULT.json  RESULT.md
templates/: README.txt
tests/: test_bench.py  test_forge.py  test_habitat_audit.py  test_invariants.py  test_smell.py
(+42 files in other folders)
