[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "charm13"
version = "0.3.7"
description = "Finite-model budgeted adaptive inspection; detection-backed habitat cover for encrypted volumes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Lombardo" }]
dependencies = []

[project.scripts]
charm = "charm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
charm = ["py.typed"]
