[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "charm13"
version = "0.3.8"
description = "Exact envelopes for budgeted adaptive inspection (finite models). G2(K)=1-1/K. Certificates. Product scar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Lombardo" }]
dependencies = []

[project.scripts]
charm = "charm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
charm = ["py.typed"]
